<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Coach</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Global -->
    <string name="button_ok">OK</string>
    <string name="button_done">Done</string>
    <string name="button_set">Set</string>
    <string name="button_cancel">Cancel</string>

    <!-- Date formats -->
    <string name="date_format_today">\'today\'</string>
    <string name="date_format_tomorrow">\'tomorrow\'</string>
    <string name="date_format_week">EEEE</string>
    <string name="date_format_long">d MMM yyyy</string>

    <!-- Notifications -->
    <string name="notification_summary_text">Complete resolution summary</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_header_general">General</string>
    <string name="settings_daily_summary_time">Daily summary time</string>
    <string name="settings_daily_summary_time_details">
        Personal Coach will notify you about new summaries only at that time.
    </string>

    <!-- Main activity -->
    <string name="main_manage_resolutions_button">Manage resolutions</string>
    <string name="main_score_label">Score</string>

    <!-- ResolutionList activity -->
    <string name="title_activity_resolution_list">Manage resolutions</string>
    <string name="resolution_list_add_resolution_button">Add new resolution</string>

    <!-- ResolutionList item -->
    <string name="resolution_item_difficulty_label">Difficulty</string>
    <string name="resolution_item_difficulty_ending">/10</string>
    <string name="resolution_item_upcoming_summary_label">Upcoming summary</string>

    <!-- AddResolution fragment -->
    <string name="title_fragment_add_resolution">Add new resolution</string>
    <string name="add_resolution_title">Title</string>
    <string name="add_resolution_description">Description</string>
    <string name="add_resolution_difficulty">Difficulty</string>
    <string name="add_resolution_interval_label">Interval in days</string>
    <string name="add_resolution_interval_text">7</string>

    <!-- ResolutionDetailsActivity activity -->
    <string name="title_activity_resolution_details">Resolution details</string>
    <string name="resolution_details_difficulty_label">Difficulty</string>
    <string name="resolution_details_difficulty_ending">/10</string>
    <string name="resolution_details_interval_label">Interval</string>
    <string name="resolution_details_interval_ending">days</string>
    <string name="resolution_details_started_label">Started</string>
    <string name="resolution_details_upcoming_summary_label">Upcoming summary</string>
    <string name="resolution_details_start_resolution">Start</string>
    <string name="resolution_details_view_summaries">View summaries</string>

    <!-- AddSummary fragment -->
    <string name="title_activity_add_summary">Add new summary</string>
    <string name="add_summary_description">Description</string>
    <string name="add_summary_progress">Progress</string>
    <string name="add_summary_real_difficulty">Real difficulty</string>
    
    <!-- SummaryList activity -->
    <string name="title_activity_summary_list">Summary list</string>

    <!-- SummaryList item -->
    <string name="summary_item_real_difficulty_label">Real difficulty</string>
    <string name="summary_item_real_difficulty_ending">/10</string>
    <string name="summary_item_progress_label">Progress</string>

</resources>
