<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddSummaryActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp">

        <EditText
            android:id="@+id/edit_text_description"
            android:hint="@string/add_summary_description"
            style="@style/AppTheme.AddSummary.EditText.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_texts"
        android:layout_alignLeft="@id/layout_texts"
        android:layout_alignStart="@id/layout_texts"
        android:layout_alignRight="@id/layout_texts"
        android:layout_alignEnd="@id/layout_texts"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/text_view_progress"
            android:text="@string/add_summary_progress"
            style="@style/AppTheme.AddResolution.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:id="@+id/seek_bar_progress"
            style="@style/AppTheme.AddSummary.SeekBar.Progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_view_progress"
            android:layout_toEndOf="@id/text_view_progress"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_real_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_progress"
        android:layout_alignLeft="@id/layout_texts"
        android:layout_alignStart="@id/layout_texts"
        android:layout_alignRight="@id/layout_texts"
        android:layout_alignEnd="@id/layout_texts"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/text_view_real_difficulty"
            android:text="@string/add_summary_real_difficulty"
            style="@style/AppTheme.AddSummary.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:id="@+id/seek_bar_real_difficulty"
            style="@style/AppTheme.AddSummary.SeekBar.Progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_view_real_difficulty"
            android:layout_toEndOf="@id/text_view_real_difficulty"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_real_difficulty"
        android:layout_alignLeft="@id/layout_texts"
        android:layout_alignStart="@id/layout_texts"
        android:layout_alignRight="@id/layout_texts"
        android:layout_alignEnd="@id/layout_texts"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <Button
            android:id="@+id/button_done"
            android:text="@string/button_done"
            android:onClick="onDoneClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>
